--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,6 +3,10 @@
 #    controller: App\Controller\DefaultController::index
 # api_login_check:
 #     path: /api/login_check
+login:
+    path: /login
+    controller: App\Controller\LoginController::index
+    methods: POST
 
 api_login_check:
     path: /api/login_check
