--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -55,8 +55,9 @@ security:
     #                 - lexik_jwt_authentication.jwt_token_authenticator
                     
 # NUMERO 3
-    # role_hierarchy:
-    #     ROLE_ADMIN: [ROLE_USER, ROLE_ADMIN]
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     encoders:
         App\Entity\User:
