--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,14 +27,14 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
-
-        main:
-            pattern:   ^/
+        api:
+            pattern: ^/api
             stateless: true
+            anonymous: true
+            provider: entity_provider
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
-            provider: entity_provider
 
         # register:
         #     pattern:  ^/register
