--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,18 +17,18 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         login:
-            pattern:  ^/api/login
+            pattern:  ^/login
             stateless: true
             anonymous: true
             json_login:
-                check_path: /api/login_check
+                check_path: /login_check
                 username_path: username
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
         api:
-            pattern: ^/api
+            pattern: ^/
             stateless: true
             anonymous: true
             provider: entity_provider
